[project]
name = "polyberg-polygraph"
version = "0.1.0"
description = "Local-first Polymarket trade ledger and post-mortem system."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["ledger*"]
